--- a/app/views/post_images/_list.html.erb
+++ b/app/views/post_images/_list.html.erb
@@ -1,3 +1,18 @@
+<div class="card-list-container py-5">
+  <% post_images.each do |post_image| %>
+  <div class="card w-50 mx-auto mt-4 shadow-lg">
+    <%= link_to post_image_path(post_image.id) do %>
+      <%= image_tag post_image.get_image, class:"card-img-top"; %>
+    <% end %>
+    <div class="card-body">
+      <div class="row">
+        <div class="col-2">
+          <%= image_tag post_image.user.get_profile_image(100,100), class:"mt-3 rounded-circle"; %>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 <% post_images.each do |post_image| %>
 <div>
   <%= link_to post_image_path(post_image.id) do %>
